--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,20 +1,24 @@
-# H2
+## H2
+#
+#spring.h2.console.enabled=true
+#
+#spring.h2.console.path=/h2
+#
+#
+## Datasource
+#
+#spring.jpa.hibernate.ddl-auto = create-drop
+#
+#spring.datasource.url=jdbc:h2:file:~/test
+#
+#spring.datasource.username=sa
+#
+#spring.datasource.password=
+#
+#spring.datasource.driver-class-name=org.h2.Driver
 
-spring.h2.console.enabled=true
 
-spring.h2.console.path=/h2
-
-
-# Datasource
-
-spring.jpa.hibernate.ddl-auto = create-drop
-
-spring.datasource.url=jdbc:h2:file:~/test
-
-spring.datasource.username=sa
-
-spring.datasource.password=
-
-spring.datasource.driver-class-name=org.h2.Driver
+spring.profiles.active=production
+spring.thymeleaf.cache=false
 
 
