--- a/front-end/package.json
+++ b/front-end/package.json
@@ -4,7 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json",
-    "build": "ng build",
+    "build": "ng build --prod --aot=false",
+    "postbuild": "npm run deploy",
+    "predeploy": "rimraf ../back-end/src/main/resources/static && mkdirp ../back-end/src/main/resources/static",
+    "deploy": "copyfiles -f dist/** ../back-end/src/main/resources/static",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
