--- a/back-end/src/main/resources/application-production.properties
+++ b/back-end/src/main/resources/application-production.properties
@@ -1,8 +1,20 @@
-# production profile
-spring.datasource.url=jdbc:sqlserver://database-praca.database.windows.net:1433;database=baza;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-spring.datasource.username=us
-spring.datasource.password=zaq1@WSX
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+## production profile
+#spring.datasource.url=jdbc:sqlserver://database-praca.database.windows.net:1433;database=baza;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+#spring.datasource.username=us
+#spring.datasource.password=zaq1@WSX
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#
+## none | validate | update | create-drop
+#spring.jpa.hibernate.ddl-auto=create
 
-# none | validate | update | create-drop
-spring.jpa.hibernate.ddl-auto=create
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+spring.datasource.url=jdbc:postgresql://217.182.79.243:5432/dbPraca
+spring.datasource.username= postgres
+spring.datasource.password= zaq1@WSX
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults = false
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL9Dialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = create
