--- a/back-end/src/main/resources/application-production.properties
+++ b/back-end/src/main/resources/application-production.properties
@@ -9,8 +9,8 @@
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.url=jdbc:postgresql://fachal.pl:5432/dbPraca
-spring.datasource.username= admin
-spring.datasource.password= qwe
+spring.datasource.username= userDB
+spring.datasource.password= 9393
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
