--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -12,7 +12,7 @@
 #spring.datasource.password=
 #spring.datasource.driver-class-name=org.h2.Driver
 
-
+#server.port=4200
 spring.profiles.active=production
 spring.thymeleaf.cache=false
 
