--- a/front-end/package.json
+++ b/front-end/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "core-js": "^2.5.4",
+    "ng-pick-datetime": "^7.0.0",
+    "ngx-material-timepicker": "^5.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
