--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -15,6 +15,7 @@
 #server.port=4200
 spring.profiles.active=production
 spring.thymeleaf.cache=false
+spring.jackson.serialization.fail-on-empty-beans=false
 
 # App Properties
 grokonez.app.jwtSecret=jwtGrokonezSecretKey
